# Nlos_setup

./: nlos server
Ros2_setup1/src/nlos_awr2944/: CMakeLists.txt  README.md  package.xml
Ros2_setup1/src/nlos_awr2944/config/: multi_radar.yaml  radar_config.json  single_radar.yaml
Ros2_setup1/src/nlos_awr2944/include/nlos_awr2944/: multi_radar_manager.hpp  radar_driver_core.hpp
Ros2_setup1/src/nlos_awr2944/launch/: all_sensors.launch.py  multi_radar.launch.py
Ros2_setup1/src/nlos_awr2944/scripts/: radar_visualizer.py
Ros2_setup1/src/nlos_awr2944/src/: multi_radar_manager.cpp  radar_node.cpp  sensor_sync_node.cpp
Ros2_setup1/src/nlos_fusion/debug/: acoustic_bag_to_csv.py  analyze_sync.py  multi_sensor_sync.cpp  process_audio_video.py  process_rosbag_sync_node.py
Ros2_setup1/src/nlos_fusion/launch/: audio.launch.py  multi_sensor.launch.py
Ros2_setup1/src/nlos_fusion/rviz/: multi_sensor.rviz
Ros2_setup1/src/nlos_fusion/scripts/: process_rosbag.py
Ros2_setup1/src/ouster-ros/ouster-ros/config/: driver_params.yaml  ouster_config.yaml
Ros2_setup1/src/ouster-ros/ouster-ros/launch/: sensor.launch.xml
Ros2_setup1/src/realsense-ros/realsense2_camera/: CMakeLists.txt  package.xml
Ros2_setup1/src/realsense-ros/realsense2_camera/config/: multi_camera.yaml
Ros2_setup1/src/realsense-ros/realsense2_camera/launch/: multi_camera.launch.py
Ros2_setup2/src/nlos_awr2944/config/: multi_radar.yaml
Ros2_setup2/src/nlos_awr2944/include/nlos_awr2944/: sensor_sync.hpp
Ros2_setup2/src/nlos_awr2944/launch/: single_radar.launch.py
Ros2_setup2/src/nlos_awr2944/rviz/: all_sensors.rviz  multi_radar.rviz  radar.rviz
Ros2_setup2/src/nlos_awr2944/src/: data_logger.cpp  radar_driver_core.cpp  radar_parser.cpp  radar_serial.cpp
Ros2_setup2/src/nlos_fusion/: CMakeLists.txt  package.xml
Ros2_setup2/src/nlos_fusion/config/: mic_geometry.xml  multi_camera.yaml
Ros2_setup2/src/nlos_fusion/debug/: multi_sensor_sync_node.launch.py
Ros2_setup2/src/nlos_fusion/launch/: audio_rosbag.launch.py  multi_sensor.launch.py
Ros2_setup2/src/nlos_fusion/scripts/: audio_node.py  process_rosbag.py  sound_localizer.py
Ros2_setup2/src/ouster-ros/ouster-ros/config/: ouster_config.yaml
Ros2_setup2/src/ouster-ros/ouster-ros/launch/: driver.launch.py
Ros2_setup2/src/realsense-ros/realsense2_camera/config/: multi_camera.yaml
Ros2_setup2/src/realsense-ros/realsense2_camera/launch/: multi_camera.launch.py
Ros2_setup2/src/vision_opencv/cv_bridge/: CMakeLists.txt
Ros2_setup2/src/vision_opencv/cv_bridge/src/: CMakeLists.txt  cv_bridge.cpp
