<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nlos_awr2944</name>
  <version>1.0.0</version>
  <description>
    AWR2944 Radar Driver for Multi-Sensor Synchronization.
    Supports up to 4 radars with hardware timestamp synchronization.
    Designed for multi-modal sensor fusion (radar, lidar, camera, microphone).
  </description>
  <maintainer email="user@example.com">NLOS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
