<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nlos_fusion</name>
  <version>1.0.0</version>
  <description>
    NLOS Multi-Sensor Fusion Package
    - Multi-sensor time synchronization (Radar, Lidar, Camera, Audio)
    - Audio processing nodes (16-channel microphone array)
    - Integrated launch files
  </description>
  <maintainer email="user@example.com">NLOS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>nlos_awr2944</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>